--- a/sass/main.scss
+++ b/sass/main.scss
@@ -54,6 +54,17 @@ a:hover {
 * {
 	  font-family: 'Kanit';
 }
+
+
+.common_container {
+	max-width: 1088px;
+	margin: 0 auto;
+}
+
+.common_padding {
+	padding: 0 10px;
+}
+
 .header {
 	width: 100%;
 	display: flex;
@@ -246,4 +257,58 @@ a:hover {
 			}
 		}
 	}
+}
+
+
+.casino_list_fluid {
+	width: 100%;
+}
+
+.casino_list_container {
+
+	.casino_list_item {
+		display: flex;
+		width: 100%;
+		padding: 30px 20px 30px 20px;
+		border-radius: 16px;
+		border: 1px solid #E5E5E5;
+		background: #fff;
+
+		&:not(:last-child){
+			margin-bottom: 20px;
+		}
+	}
+
+	.casino_list_logo {
+
+		width: 200px;
+		height: 140px;
+		flex: 0 0 200px;
+		border-radius: 10px;
+		overflow: hidden;
+
+		a {
+
+			width: 100%;
+			height: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			img {	
+				width: 100%;
+				height: 100%;
+				object-fit: contain;
+			}
+		}
+
+	}
+
+	.casino_list_info {
+
+		display: flex;
+		flex-direction: column;
+
+		
+	}
+
 }
