--- a/css/main.css
+++ b/css/main.css
@@ -173,33 +173,100 @@ a:hover {
 .casino_list_fluid {
   width: 100%; }
 
-.casino_list_container .casino_list_item {
-  display: flex;
-  width: 100%;
-  padding: 30px 20px 30px 20px;
-  border-radius: 16px;
-  border: 1px solid #E5E5E5;
-  background: #fff; }
-  .casino_list_container .casino_list_item:not(:last-child) {
-    margin-bottom: 20px; }
-.casino_list_container .casino_list_logo {
-  width: 200px;
-  height: 140px;
-  flex: 0 0 200px;
-  border-radius: 10px;
-  overflow: hidden; }
-  .casino_list_container .casino_list_logo a {
-    width: 100%;
-    height: 100%;
+.casino_list_container {
+  padding: 50px 0 30px; }
+  .casino_list_container .casino_list_item {
     display: flex;
+    width: 100%;
+    padding: 30px 20px 30px 20px;
+    border-radius: 16px;
+    border: 1px solid #E5E5E5;
+    background: #fff;
     align-items: center;
-    justify-content: center; }
-    .casino_list_container .casino_list_logo a img {
+    margin-bottom: 20px; }
+  .casino_list_container .casino_list_logo {
+    width: 200px;
+    height: 140px;
+    flex: 0 0 200px;
+    border-radius: 10px;
+    overflow: hidden;
+    background: green; }
+    .casino_list_container .casino_list_logo a {
       width: 100%;
       height: 100%;
-      object-fit: contain; }
-.casino_list_container .casino_list_info {
-  display: flex;
-  flex-direction: column; }
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+      .casino_list_container .casino_list_logo a img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain; }
+  .casino_list_container .casino_list_info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-width: 340px;
+    margin: 0 15px; }
+    .casino_list_container .casino_list_info * {
+      font-family: "Roboto";
+      color: #2C3E50; }
+    .casino_list_container .casino_list_info .bold_title {
+      font-size: 32px;
+      font-weight: bold; }
+  .casino_list_container .casino_list_li {
+    flex-grow: 1; }
+    .casino_list_container .casino_list_li li svg {
+      margin-right: 7px; }
+    .casino_list_container .casino_list_li li span {
+      font-size: 14px;
+      font-family: "Roboto";
+      color: #2C3E50; }
+  .casino_list_container .casino_list_button a {
+    background: #27AE60;
+    border-radius: 15px;
+    padding: 7px 14px;
+    display: flex;
+    align-items: center;
+    color: #fff; }
+    .casino_list_container .casino_list_button a svg {
+      margin-right: 10px; }
+  .casino_list_container .star_review {
+    text-align: center;
+    font-size: 14px;
+    color: #2C3E50; }
+  .casino_list_container .casino_list_title {
+    font-size: 28px;
+    color: #2C3E50;
+    text-align: center;
+    margin-bottom: 30px; }
+
+.star-ratings-css {
+  unicode-bidi: bidi-override;
+  color: #c5c5c5;
+  font-size: 25px;
+  height: 35px;
+  overflow: hidden;
+  width: 130px;
+  position: relative;
+  padding: 0;
+  text-shadow: 0px 1px 0 #a2a2a2; }
+  .star-ratings-css .star-ratings-css-top {
+    color: #ffe300;
+    padding: 0;
+    position: absolute;
+    z-index: 1;
+    display: block;
+    top: 0;
+    left: 0;
+    overflow: hidden; }
+  .star-ratings-css .star-ratings-css-bottom {
+    padding: 0;
+    display: block;
+    z-index: 0; }
+  .star-ratings-css img {
+    width: 20px;
+    height: 20px; }
 
 /*# sourceMappingURL=main.css.map */
