--- a/css/main.css
+++ b/css/main.css
@@ -223,24 +223,27 @@ a:hover {
       font-size: 14px;
       font-family: "Roboto";
       color: #2C3E50; }
-  .casino_list_container .casino_list_button a {
-    background: #27AE60;
-    border-radius: 15px;
-    padding: 7px 14px;
-    display: flex;
-    align-items: center;
-    color: #fff; }
-    .casino_list_container .casino_list_button a svg {
-      margin-right: 10px; }
-  .casino_list_container .star_review {
-    text-align: center;
-    font-size: 14px;
-    color: #2C3E50; }
   .casino_list_container .casino_list_title {
     font-size: 28px;
     color: #2C3E50;
     text-align: center;
     margin-bottom: 30px; }
+
+.casino_list_links .casino_list_button a {
+  background: #27AE60;
+  border-radius: 15px;
+  padding: 7px 14px;
+  display: flex;
+  align-items: center;
+  color: #fff; }
+  .casino_list_links .casino_list_button a svg {
+    margin-right: 10px; }
+  .casino_list_links .casino_list_button a span {
+    white-space: nowrap; }
+.casino_list_links .star_review {
+  text-align: center;
+  font-size: 14px;
+  color: #2C3E50; }
 
 .star-ratings-css {
   unicode-bidi: bidi-override;
@@ -248,7 +251,7 @@ a:hover {
   font-size: 25px;
   height: 35px;
   overflow: hidden;
-  width: 130px;
+  width: 102px;
   position: relative;
   padding: 0;
   text-shadow: 0px 1px 0 #a2a2a2; }
@@ -257,16 +260,168 @@ a:hover {
     padding: 0;
     position: absolute;
     z-index: 1;
-    display: block;
+    display: flex;
     top: 0;
     left: 0;
     overflow: hidden; }
   .star-ratings-css .star-ratings-css-bottom {
     padding: 0;
-    display: block;
+    display: flex;
     z-index: 0; }
   .star-ratings-css img {
     width: 20px;
     height: 20px; }
+
+.long_text_fluid {
+  background-color: #F4F4F4;
+  padding: 40px 10px 90px 10px;
+  border-radius: 0 0 100px 100px; }
+  .long_text_fluid.transparent {
+    border-radius: 0;
+    background-color: transparent;
+    padding: 40px 10px 10px 10px !important; }
+    .long_text_fluid.transparent .long_text_title .title {
+      text-align: left !important;
+      color: #2C3E50 !important;
+      opacity: 1 !important; }
+  .long_text_fluid .long_text_title {
+    /*margin-bottom: 30px;*/ }
+    .long_text_fluid .long_text_title .title {
+      text-align: center;
+      color: #2C3E50;
+      font-size: 32px;
+      opacity: 0.4;
+      margin-bottom: 30px;
+      margin-top: 20px; }
+  .long_text_fluid .long_text_paragraph p, .long_text_fluid .long_text_paragraph span, .long_text_fluid .long_text_paragraph a {
+    color: #2C3E50;
+    font-size: 16px;
+    font-family: "Roboto"; }
+  .long_text_fluid .long_text_paragraph a {
+    color: #5642EC;
+    text-decoration: underline; }
+  .long_text_fluid .long_text_paragraph .title {
+    margin: 30px 0 20px;
+    font-size: 24px; }
+
+.casino_slider_fluid {
+  width: 100%;
+  overflow: hidden;
+  margin: 50px 0 20px; }
+  .casino_slider_fluid .casino_slider_title {
+    font-size: 32px;
+    color: #2C3E50;
+    text-align: center;
+    margin-bottom: 30px; }
+  .casino_slider_fluid .casino_list_item {
+    padding: 15px 0; }
+    .casino_slider_fluid .casino_list_item .casino_list_center {
+      margin: 0 50px 0 20px; }
+    .casino_slider_fluid .casino_list_item .casino_list_flags {
+      display: flex;
+      flex-direction: column; }
+      .casino_slider_fluid .casino_list_item .casino_list_flags img {
+        width: 24px;
+        height: 24px;
+        flex: 0 0 24px; }
+        .casino_slider_fluid .casino_list_item .casino_list_flags img:first-child {
+          margin-bottom: 5px; }
+    .casino_slider_fluid .casino_list_item .rev_stars {
+      display: flex;
+      justify-content: center;
+      margin: 7px 0 3px; }
+    .casino_slider_fluid .casino_list_item .star-ratings-css {
+      height: 19px; }
+    .casino_slider_fluid .casino_list_item .casino_body_wrapper {
+      border-radius: 10px;
+      background: #fff;
+      border: 1px solid #E5E5E5;
+      padding: 20px;
+      transition: all .3s; }
+      .casino_slider_fluid .casino_list_item .casino_body_wrapper:hover {
+        box-shadow: 0px 0px 13px 2px #00000036; }
+      .casino_slider_fluid .casino_list_item .casino_body_wrapper .casino_list_item_title {
+        font-size: 28px;
+        color: #2C3E50;
+        text-align: center;
+        width: 100%;
+        border-top: 1px solid #E5E5E5;
+        padding: 23px 0 10px;
+        margin-top: 20px; }
+    .casino_slider_fluid .casino_list_item .casino_list_body {
+      display: flex;
+      justify-content: center; }
+      .casino_slider_fluid .casino_list_item .casino_list_body .casino_list_img {
+        width: 90px;
+        height: 90px;
+        border-radius: 15px;
+        flex: 0 0 90px;
+        overflow: hidden; }
+        .casino_slider_fluid .casino_list_item .casino_list_body .casino_list_img a {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          height: 100%; }
+        .casino_slider_fluid .casino_list_item .casino_list_body .casino_list_img img {
+          width: 100%;
+          height: 100%; }
+
+.casino_slider {
+  /* the parent */ }
+  .casino_slider .slick-slide {
+    margin: 0 15px; }
+  .casino_slider .slick-list {
+    margin: 0 -15px; }
+  .casino_slider .slick-dots li {
+    width: 6px;
+    height: 6px;
+    background-color: #2C3E50;
+    border-radius: 50%;
+    position: relative;
+    margin-right: 10px; }
+    .casino_slider .slick-dots li:after {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 22px;
+      height: 22px;
+      /*border: 1px solid #5642EC;*/
+      border-radius: 50%;
+      border-left: unset;
+      content: "";
+      transform: translate(-50%, -50%);
+      opacity: 0;
+      transition: all .4s;
+      background-image: url("../images/Ellipse 9.png"); }
+    .casino_slider .slick-dots li.slick-active {
+      background-color: #5642EC; }
+      .casino_slider .slick-dots li.slick-active:after {
+        opacity: 1; }
+
+.long_text_fluid .common_title {
+  margin-bottom: 30px; }
+  .long_text_fluid .common_title .title {
+    color: #2C3E50;
+    font-size: 32px; }
+.long_text_fluid .common_paragraph * {
+  font-size: 16px;
+  color: #2C3E50;
+  font-family: "Roboto"; }
+
+.link_tabs_container {
+  display: flex;
+  margin: 30px 0 20px; }
+  .link_tabs_container a {
+    margin-right: 10px;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 6px 18px;
+    border: 1px solid #5642EC;
+    color: #5642EC;
+    transition: all .4s; }
+    .link_tabs_container a:hover {
+      background-color: #5642EC;
+      color: #fff; }
 
 /*# sourceMappingURL=main.css.map */
