--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,11 @@ a:hover {
         border-radius: 20px;
         margin: 0 30px 0 40px;
         padding: 7px 18px 9px 18px;
-        cursor: pointer; }
+        cursor: pointer;
+        display: flex;
+        align-items: center; }
+        .header .header_right .language_bar .language_title span {
+          margin: 0 6px 0 4px; }
         .header .header_right .language_bar .language_title .default_language {
           margin-right: 3px; }
         .header .header_right .language_bar .language_title .language_caret {
@@ -103,7 +107,9 @@ a:hover {
           .header .header_right .language_bar .language_body ul li:not(:last-child) {
             border-bottom: 1px solid #F4F4F4; }
           .header .header_right .language_bar .language_body ul li a {
-            color: #000; }
+            color: #000;
+            display: flex;
+            align-items: center; }
             .header .header_right .language_bar .language_body ul li a img, .header .header_right .language_bar .language_body ul li a svg {
               margin: 0 5px 0 10px; }
     .header .header_right nav {
@@ -411,7 +417,7 @@ a:hover {
 
 .link_tabs_container {
   display: flex;
-  margin: 30px 0 20px; }
+  padding: 30px 10px 20px; }
   .link_tabs_container a {
     margin-right: 10px;
     background-color: #fff;
@@ -423,5 +429,110 @@ a:hover {
     .link_tabs_container a:hover {
       background-color: #5642EC;
       color: #fff; }
+
+footer {
+  background-color: #34495E; }
+  footer .common_container {
+    padding: 50px 0 30px; }
+  footer .footer_nav .footer_nav_title {
+    font-size: 24px;
+    color: #fff;
+    position: relative;
+    transform: translate(-5px, -7px); }
+    footer .footer_nav .footer_nav_title:after {
+      content: "";
+      position: absolute;
+      bottom: 0px;
+      width: 38%;
+      height: 1px;
+      background-color: #2C3E50;
+      left: 0; }
+  footer .footer_nav nav ul li a {
+    color: #fff;
+    font-size: 16px;
+    font-family: "Roboto";
+    position: relative;
+    margin-left: 10px; }
+    footer .footer_nav nav ul li a:after {
+      content: "";
+      position: absolute;
+      bottom: 5px;
+      width: 9px;
+      height: 9px;
+      background-image: url("../images/Group 842.svg");
+      background-repeat: no-repeat;
+      left: -14px;
+      background-size: contain; }
+  footer .footer_top {
+    display: flex;
+    border-bottom: 1px solid #2f4356;
+    padding-bottom: 25px; }
+    footer .footer_top > div:nth-child(1) {
+      width: 60%;
+      padding-right: 45px; }
+    footer .footer_top > div:nth-child(2) {
+      width: 20%; }
+    footer .footer_top > div:nth-child(3) {
+      width: 20%;
+      padding-left: 15px; }
+    footer .footer_top .footer_paragraph_title {
+      color: #fff;
+      font-size: 14px;
+      font-family: "Roboto";
+      font-weight: bold;
+      margin-bottom: 20px; }
+    footer .footer_top .footer_paragraph p, footer .footer_top .footer_paragraph span {
+      font-size: 14px;
+      font-family: "Roboto";
+      color: #fff; }
+    footer .footer_top .footer_paragraph p {
+      margin-bottom: 15px; }
+  footer .footer_bottom {
+    display: flex;
+    justify-content: center;
+    margin-top: 25px; }
+    footer .footer_bottom > div {
+      background-color: #2C3E50;
+      border-radius: 8px;
+      overflow: hidden;
+      padding: 10px; }
+      footer .footer_bottom > div:nth-child(1) {
+        width: 105px;
+        height: 60px; }
+      footer .footer_bottom > div:nth-child(2) {
+        width: 188px;
+        height: 60px; }
+      footer .footer_bottom > div:nth-child(3) {
+        width: 56px;
+        height: 60px; }
+      footer .footer_bottom > div:nth-child(4) {
+        width: 111px;
+        height: 60px; }
+      footer .footer_bottom > div:nth-child(5) {
+        width: 60px;
+        height: 60px; }
+      footer .footer_bottom > div a {
+        display: flex;
+        align-items: center;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%; }
+        footer .footer_bottom > div a img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain; }
+      footer .footer_bottom > div:not(:last-child) {
+        margin-right: 10px; }
+
+.copyright {
+  width: 100%;
+  background-color: #2C3E50;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 60px;
+  font-family: "Roboto";
+  color: #fff; }
 
 /*# sourceMappingURL=main.css.map */
