--- a/sass/main.scss
+++ b/sass/main.scss
@@ -94,7 +94,12 @@ a:hover {
 				margin: 0 30px 0 40px;
     			padding: 7px 18px 9px 18px;
     			cursor: pointer;
+    			display: flex;
+    			align-items: center;
 
+    			span {
+    				margin: 0 6px 0 4px;
+    			}
     			.default_language {
     				margin-right: 3px;
     			}
@@ -151,7 +156,8 @@ a:hover {
 						    }
 						a {
 							color: #000;
-
+							display: flex;
+							align-items: center;
 							img,svg {
 								margin: 0 5px 0 10px;
 							}
@@ -639,7 +645,7 @@ a:hover {
 
 .link_tabs_container {
 	display: flex;
-	margin: 30px 0 20px;
+	padding: 30px 10px 20px;
 
 	a {
 		margin-right: 10px;
@@ -654,4 +660,173 @@ a:hover {
 			color: #fff;
 		}
 	}
+}
+
+footer {
+	background-color: #34495E;
+
+	.common_container {
+		padding: 50px 0 30px;
+	}
+
+
+	.footer_nav {
+		.footer_nav_title {
+
+			font-size: 24px;
+			color: #fff;
+			position: relative;
+			transform:translate(-5px, -7px);
+			&:after{
+				content:"";
+				position: absolute;
+			    bottom: 0px;
+			    width: 38%;
+			    height: 1px;
+			    background-color: #2C3E50;
+			    left: 0;
+			}
+
+		}
+
+		nav {
+			ul {
+				li {
+
+					a {
+					color: #fff;
+					font-size: 16px;
+					font-family: "Roboto";
+					position: relative;
+					margin-left: 10px;
+					&:after{
+						content:"";
+						position: absolute;
+					    bottom: 5px;
+					    width: 9px;
+					    height: 9px;
+					    background-image: url("../images/Group 842.svg");
+					    background-repeat: no-repeat;
+					    left: -14px;
+					    background-size: contain;
+
+					}	
+					}
+				}
+			}
+		}
+	}
+
+	.footer_top {
+		display: flex;
+		  border-bottom: 1px solid #2f4356;
+   		 padding-bottom: 25px;
+
+		&>div {
+			&:nth-child(1){
+			 	width: 60%;
+			 	padding-right: 45px;
+
+			}
+			&:nth-child(2){
+			 	width: 20%;
+			 	
+			}
+			&:nth-child(3){
+			 	width: 20%;
+			 	padding-left: 15px;
+			 	
+			}
+		}
+		.footer_paragraph_title{
+			color: #fff;
+			font-size: 14px;
+			font-family: "Roboto";
+			font-weight: bold;
+			margin-bottom: 20px;
+		}
+
+		.footer_paragraph {
+			p,span {
+				font-size: 14px;
+				font-family: "Roboto";
+				color: #fff;
+			}
+
+			p {
+				margin-bottom: 15px;
+			}
+		}
+	}
+
+	.footer_bottom {
+		display: flex;
+		justify-content: center;
+		margin-top: 25px;
+		&>div{
+			background-color: #2C3E50;
+			border-radius: 8px;
+			overflow: hidden;
+			padding: 10px;
+			&:nth-child(1){
+				width: 105px;
+				height: 60px;
+			}
+
+			&:nth-child(2){
+				width: 188px;
+				height: 60px;
+			}
+
+
+			&:nth-child(3){
+				width: 56px;
+				height: 60px;
+			}
+
+
+			&:nth-child(4){
+				width: 111px;
+				height: 60px;
+			}
+
+
+			&:nth-child(5){
+				width: 60px;
+				height: 60px;
+			}
+
+
+			a {
+				display: flex;
+				align-items: center;
+				align-items: center;
+			    justify-content: center;
+			    width: 100%;
+			    height: 100%;
+
+
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: contain;
+				}
+			}
+			&:not(:last-child){
+				margin-right: 10px;
+			}
+
+		}
+	}
+}
+
+.copyright {
+	width: 100%;
+	background-color: #2C3E50;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 60px;
+	font-family: "Roboto";
+	color: #fff;
 }
