--- a/css/main.css
+++ b/css/main.css
@@ -957,4 +957,54 @@ footer {
         color: #5642EC;
         text-decoration: underline; }
 
+.error_fluid {
+  width: 100%;
+  height: 100%;
+  min-height: 70vh;
+  background-color: #E5E2FF; }
+  .error_fluid .error_container {
+    display: flex;
+    align-items: center;
+    padding: 5% 0;
+    position: relative;
+    overflow: hidden; }
+    .error_fluid .error_container > img {
+      position: relative;
+      z-index: 1000; }
+    .error_fluid .error_container:after {
+      position: absolute;
+      left: 36%;
+      top: -107px;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      background-color: #C8C2FB;
+      content: "";
+      z-index: 10; }
+  .error_fluid .eror_text {
+    margin-left: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .error_fluid .eror_text .title {
+      font-size: 75px;
+      color: #5642EC; }
+    .error_fluid .eror_text p {
+      color: #515E73;
+      font-family: "Roboto"; }
+    .error_fluid .eror_text a {
+      margin-top: 15px;
+      border-radius: 17px;
+      background-color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #5642EC;
+      border: 1px solid #5642EC;
+      padding: 4px 8px;
+      transition: all .4s; }
+      .error_fluid .eror_text a:hover {
+        color: #fff;
+        background-color: #5642EC; }
+
 /*# sourceMappingURL=main.css.map */
