--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1483,3 +1483,70 @@ background-image:
 		}
 	}
 }
+
+
+.error_fluid {
+	width: 100%;
+	height: 100%;
+	min-height: 70vh;
+		background-color: #E5E2FF;
+
+	.error_container {
+		display: flex;
+		align-items: center;
+		padding: 5% 0;
+		position: relative;
+		overflow: hidden;
+
+		&>img {
+			position: relative;
+			z-index: 1000;
+		}
+		&:after{
+			    position: absolute;
+		        left: 36%;
+			    top: -107px;
+			    width: 200px;
+			    height: 200px;
+			    border-radius: 50%;
+			    background-color: #C8C2FB;
+			    content: "";
+			    z-index: 10;
+		}
+	}
+
+	.eror_text {	
+	margin-left: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+		.title {
+			font-size: 75px;
+			color: #5642EC;
+		}
+
+		p {
+			color: #515E73;
+			font-family: "Roboto";
+		}
+
+		a {
+			margin-top: 15px;
+			border-radius: 17px;
+			background-color: #fff;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			color: #5642EC;
+			border: 1px solid #5642EC;
+			padding: 4px 8px;
+			transition: all .4s;
+
+			&:hover{
+				color:#fff;
+				background-color: #5642EC;
+			}
+		}
+	}
+}
