--- a/css/main.css
+++ b/css/main.css
@@ -127,10 +127,16 @@ a:hover {
   width: 100%;
   height: calc(100vh - 80px);
   overflow: hidden;
-  background-image: url("../images/casino_bg.svg"), linear-gradient(to right, #E2DFFF, #988CFE);
+  background-image: linear-gradient(to right, #E2DFFF, #988CFE);
   position: relative;
   background-repeat: no-repeat;
-  background-position: 135% 35%; }
+  background-position: 120% 35%; }
+  .main_section .main_section_img {
+    position: absolute;
+    top: 50%;
+    right: -175px;
+    z-index: 1;
+    transform: translateY(-50%); }
   .main_section:after {
     content: "";
     width: 123%;
@@ -247,7 +253,7 @@ a:hover {
 
 .main_body .short_info {
   max-width: 1088px;
-  margin: 0 auto;
+  margin: 0 auto 50px;
   border: 1px solid #E5E5E5;
   border-radius: 16px;
   padding: 60px 90px 70px 90px;
@@ -280,10 +286,30 @@ a:hover {
       color: #2C3E50; }
 
 .casino_list_fluid {
-  width: 100%; }
+  width: 100%;
+  position: relative;
+  overflow: hidden; }
+  .casino_list_fluid .casino_list_left_anime {
+    width: 460px;
+    height: 460px;
+    border-radius: 50%;
+    background-color: #DDD9FB;
+    position: absolute;
+    top: 75px;
+    left: -130px;
+    z-index: -1; }
+  .casino_list_fluid .casino_list_right_anime {
+    width: 1212px;
+    height: 1212px;
+    border-radius: 50%;
+    background-color: #5642EC;
+    position: absolute;
+    top: 96px;
+    right: -22%;
+    z-index: -1; }
 
 .casino_list_container {
-  padding: 50px 0 30px; }
+  padding: 10px 0 30px; }
   .casino_list_container .casino_list_item {
     display: flex;
     width: 100%;
@@ -345,7 +371,7 @@ a:hover {
 
 .casino_list_button a {
   background: #27AE60;
-  border-radius: 15px;
+  border-radius: 20px;
   padding: 7px 14px;
   display: flex;
   align-items: center;
@@ -916,7 +942,7 @@ footer {
   padding: 20px 0 100px; }
 
 .blog_inner_header {
-  height: 264px;
+  height: 315px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/bloginner.jpg");
   background-size: cover;
   background-position: center; }
@@ -1410,7 +1436,8 @@ textarea {
           position: relative;
           z-index: 1000; }
         .casino_inner_body .body_right .casino_right_cotent .casino_right_tab .casino_list_info {
-          margin: 0; }
+          margin: 0;
+          text-align: center; }
   .casino_inner_body .body_left {
     flex-grow: 1; }
     .casino_inner_body .body_left .payment_method_container {
