--- a/sass/main.scss
+++ b/sass/main.scss
@@ -195,10 +195,18 @@ a:hover {
 	width: 100%;
 	height: calc(100vh - 80px);
 	overflow: hidden;
-	background-image: url("../images/casino_bg.svg"), linear-gradient(to right ,#E2DFFF,#988CFE);
+	background-image: linear-gradient(to right ,#E2DFFF,#988CFE);
 	position: relative;
 	    background-repeat: no-repeat;
-    background-position: 135% 35%;
+    background-position: 120% 35%;
+
+    .main_section_img {
+    	    position: absolute;
+		    top: 50%;
+		    right: -175px;
+		    z-index: 1;
+		    transform: translateY(-50%);
+    }
 	&:after{
 
 		content:"";
@@ -356,7 +364,7 @@ a:hover {
 
 	.short_info {
 		max-width: 1088px;
-		margin: 0 auto;
+		margin: 0 auto 50px;
 		border: 1px solid #E5E5E5;
 		border-radius: 16px;
 		padding: 60px 90px 70px 90px;
@@ -404,10 +412,37 @@ a:hover {
 
 .casino_list_fluid {
 	width: 100%;
+	position: relative;
+	overflow: hidden;
+
+	.casino_list_left_anime {
+		width: 460px;
+	    height: 460px;
+	    border-radius: 50%;
+	    background-color: #DDD9FB;
+	    position: absolute;
+	    top: 75px;
+	    left: -130px;
+	    z-index: -1;
+	}
+
+
+	.casino_list_right_anime {
+		width: 1212px;
+	    height: 1212px;
+	    border-radius: 50%;
+	    background-color: #5642EC;
+	    position: absolute;
+	    top: 96px;
+	    right: -22%;
+	    z-index: -1;
+	}
+
+
 }
 
 .casino_list_container {
-	padding: 50px 0 30px;
+	padding: 10px 0 30px;
 	.casino_list_item {
 
 		display: flex;
@@ -507,7 +542,7 @@ a:hover {
 		a {
 
 			background: #27AE60;
-			border-radius: 15px;
+			border-radius: 20px;
 			padding: 7px 14px;
 			display: flex;
 			align-items: center;
@@ -1391,7 +1426,7 @@ footer {
 }
 
 .blog_inner_header {
-height: 264px;
+height: 315px;
 background-image:
  linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,0.7)), url("../images/bloginner.jpg");
      background-size: cover;
@@ -2111,6 +2146,7 @@ textarea {
 
 					.casino_list_info {
 						margin: 0;
+						text-align: center;
 					}
 				}
 		}
