--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,9 @@ a:hover {
 * {
   font-family: 'Kanit'; }
 
+body.overflow {
+  overflow: hidden; }
+
 .common_container {
   max-width: 1088px;
   margin: 0 auto;
@@ -195,7 +198,12 @@ a:hover {
           position: absolute;
           bottom: 0; }
           .main_section .home_slider .home_slider_item .home_slide_item_wrapper .casino_list_button a {
-            border-radius: 20px; }
+            border-radius: 20px;
+            background-color: #2ECC71; }
+            .main_section .home_slider .home_slider_item .home_slide_item_wrapper .casino_list_button a span {
+              color: #fff; }
+            .main_section .home_slider .home_slider_item .home_slide_item_wrapper .casino_list_button a path {
+              fill: #fff; }
         .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_center_title {
           text-align: center;
           color: #fff;
@@ -321,6 +329,9 @@ a:hover {
     background: #fff;
     align-items: center;
     margin-bottom: 20px; }
+    .casino_list_container .casino_list_item .rev_stars {
+      display: flex;
+      justify-content: center; }
   .casino_list_container .casino_list_logo {
     width: 200px;
     height: 140px;
@@ -1019,7 +1030,8 @@ footer {
     margin: 30px 0; }
     .blog_inner_container .blog_banner img {
       width: 100%;
-      height: 100%; }
+      height: 100%;
+      object-fit: cover; }
 
 .top_common_story_fluid {
   background-color: #5642EC;
@@ -1168,7 +1180,7 @@ footer {
       justify-content: center;
       color: #5642EC;
       border: 1px solid #5642EC;
-      padding: 4px 8px;
+      padding: 4px 10px;
       transition: all .4s; }
       .error_fluid .eror_text a:hover {
         color: #fff;
@@ -2076,7 +2088,7 @@ textarea {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     background: #fff;
     top: 86px;
     z-index: 1000;
@@ -2279,8 +2291,8 @@ textarea {
     margin: 15px 0px;
     text-align: center; }
 
-  .casino_list_links {
-    display: flex;
+  .casino_list_item .casino_list_links {
+    display: flex !important;
     justify-content: space-between;
     margin-top: 14px;
     align-items: flex-start; }
@@ -2312,8 +2324,8 @@ textarea {
     font-size: 24px;
     line-height: 24px; }
 
-  .casino_list_links {
-    display: block; }
+  .casino_slider_container .casino_list_links {
+    display: block !important; }
 
   .casino_slider_fluid .casino_list_item .casino_list_center {
     margin: 0 20px 0 20px; }
@@ -2426,7 +2438,10 @@ textarea {
     line-height: 18px; }
 
   .blog_inner_header {
-    height: 254px; } }
+    height: 254px; }
+    .blog_inner_header:after {
+      content: "";
+      width: 187%; } }
 @media screen and (max-width: 350px) {
   .casino_list_container .casino_list_logo {
     width: 100%; } }
