--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1129,6 +1129,8 @@ footer {
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
+		position: relative;
+		z-index: 1000;
 
 		.title {
 			font-size: 40px;
@@ -2123,10 +2125,13 @@ textarea {
 
 	height: auto;
 
-
 	&:after{
-		content:unset;
+		height:323px;
 	}
+
+	/*&:after{
+		content:unset;
+	}*/
 
 	.casino_inner_main_header {
 		display: flex;
@@ -2245,6 +2250,7 @@ textarea {
 				padding: 20px;
 				background-color: #fff;
 				margin-top: 20px;
+				border: 1px solid #E5E5E5;
 
 				.logo_container {
 					display: flex;
@@ -2337,6 +2343,7 @@ textarea {
 				border-radius: 10px;
 				padding: 20px;
 				background-color: #fff;
+				border: 1px solid #E5E5E5;	
 
 				.title {
 					color: #2C3E50;
@@ -2365,7 +2372,7 @@ textarea {
 	}
 
 	&:after{
-		content:"";
+		/*content:"";*/
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -2401,7 +2408,6 @@ textarea {
 
 .games_fluid {
 
-	margin: 50px 0 0px;
 	background-image: linear-gradient(to right,#E1DEFD,#988CFE);
 	padding: 50px 10px;
 
@@ -2694,6 +2700,15 @@ textarea {
 }
 
 
+@media screen and (min-width: 992px) {
+	.casino_inner_fluid:before {
+
+	content: unset;
+}
+
+}
+
+
 @media screen and (max-width: 992px) {
 .casino_inner_body .body_left .payment_method_container .logo_container img {
     flex: 0 0 30%;
@@ -2703,17 +2718,22 @@ textarea {
     object-fit: contain;
 }
 
-
+.casino_inner_header:after {
+	height: 247px !important;
+	background-color: #e5e2ff;
+	bottom: -107px !important;
+	width: 100% !important;
+}
 .games_fluid ~ .long_text_fluid  {
 	background-color: #F4F4F4 !important;
 
-	& ~ div {
+	/*& ~ div {*/
 	background-color: #F4F4F4 !important;
-		& ~ div {
+	/*	& ~ div {
 	background-color: #F4F4F4 !important;
 		
-	}
-	}
+	}*/
+	/*}*/
 }
 
 .user_reviews_fluid .title {
@@ -2734,7 +2754,14 @@ textarea {
 
 .casino_inner_fluid {
 	background-color: #F4F4F4;
+	padding-bottom: 40px;
 }
+
+.list_fluid,.review_fluid,.user_reviews_fluid  {
+	background-color: #F4F4F4;
+
+}
+
 .casino_inner_fluid:before {
 	height: 100%;
 }
